<?xml version="1.0" encoding="utf-8"?>
<!--
    AviaDroid
    Copyright (C) 2014  Andrew Novikov

    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along
    with this program; if not, write to the Free Software Foundation, Inc.,
    51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
    android:layout_marginTop="15dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="23sp"
    android:text="@string/txt_reciprocal_title" />
  <TextView
    android:layout_marginTop="15dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="17sp"
    android:text="@string/txt_reciprocal_current_label" />
  <TextView
    android:id="@+id/txt_current_hdg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="45sp"
    android:text="360" />
  <TextView
    android:layout_margin="15dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="17sp"
    android:text="@string/txt_reciprocal_prompt" />
  <EditText android:id="@+id/edit_reciprocal"
            android:textSize="45sp"
            android:hint="000"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:inputType="number"
            android:digits="1234567890"
            android:maxLength="3" />
</LinearLayout>
